# slint-sd-image-viewer

./: .gitignore  Cargo.toml  README.ja.md  README.md  build.rs
.github/: copilot-instructions.md  release-body.md
.github/workflows/: ci.yml
bundle/: macos-info.plist
src/: config.rs  error.rs  file_utils.rs  image_cache.rs  image_loader.rs  main.rs  metadata.rs  startup.rs
src/services/: auto_reload_service.rs  clipboard_service.rs  color_management_service.rs  display_profile_service.rs  mod.rs  navigation_service.rs  rating_service.rs
src/state/: mod.rs  navigation.rs
src/ui/: display_tracker.rs  handlers.rs  image_display.rs  mod.rs  state_helpers.rs
ui/: app-window.slint  error-state.slint  info-area.slint  info-state.slint  logic.slint  slider.slint  table.slint  top-shortcut.slint  view-area.slint  view-state.slint  viewer-area.slint  viewer-state.slint
ui/components/: left-right-navigation.slint  menu-item.slint  ui-button.slint  viewer-menu.slint
