[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2"
async-std = "1.13"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = "0.4"
lru = "0.16.3"
once_cell = "1"
png = "0.17"
rayon = "1.10"
regex = "1"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
slint = { version = "1.14.1", features = ["image-default-formats"] }
xmp_toolkit = "1.12"

[build-dependencies]
slint-build = "1.14.1"

[package.metadata.bundle]
name = "My Slint App"
identifier = "com.example.my-slint-app"
# icon = ["icons/icon.png"] # アイコンがあれば指定（なければこの行を消す）
category = "DeveloperTool"