[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"
description = "Image viewer for Stable Diffusion metadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2"
async-std = "1.13"
chrono = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = "0.4"
lru = "0.16.3"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
once_cell = "1"
png = "0.17"
rayon = "1.10"
regex = "1"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
slint = { version = "1", features = ["image-default-formats", "backend-winit"] }
xmp_toolkit = "1.12"

# macOS clipboard functionality and display tracking
[target.'cfg(target_os = "macos")'.dependencies]
i-slint-backend-winit = "1"
lcms2 = "6"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

# Windows clipboard functionality
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Ole", 
    "Win32_System_Com", 
    "Win32_UI_Shell", 
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory"
] }

# Linux clipboard functionality
[target.'cfg(target_os = "linux")'.dependencies]
arboard = "3"

[build-dependencies]
slint-build = "1"

[package.metadata.bundle]
name = "Slint SD Image Viewer"
identifier = "com.tenpamk2.slint-sd-image-viewer"
icon = ["target/generated/icon.icns"]
category = "public.app-category.photography"
osx_info_plist_exts = ["bundle/macos-info.plist"]
