[package]
name = "slint-sd-image-viewer"
version = "0.1.1"
edition = "2021"
description = "Image viewer for Stable Diffusion metadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2"
async-std = "1.13"
chrono = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
log = "0.4"
lru = "0.16.3"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
once_cell = "1"
png = "0.17"
rayon = "1.10"
regex = "1"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
slint = { version = "1", features = ["image-default-formats", "backend-winit"] }
xmp_toolkit = "1.12"
i-slint-backend-winit = "1"

# macOS display profile functionality
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

# macOS and Windows color management
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
lcms2 = { version = "6", features = ["static"] }

# Windows clipboard functionality
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Ole", 
    "Win32_System_Com", 
    "Win32_UI_Shell", 
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_UI_ColorSystem"
] }

# Linux clipboard functionality
[target.'cfg(target_os = "linux")'.dependencies]
arboard = "3"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
slint-build = "1"

[target.'cfg(target_os = "windows")'.build-dependencies]
ico = "0.4"
winresource = "0.1"

[package.metadata.packager]
product-name = "Slint SD Image Viewer"
identifier = "com.tenpamk2.slint-sd-image-viewer"
icons = ["bundle/icon.png"]
category = "Photography"
before-packaging-command = "cargo build --release"
out-dir = "target/release/packager"

[package.metadata.packager.macos]
info-plist-path = "bundle/macos-info.plist"

[package.metadata.packager.nsis]
installer-icon = "target/generated/icon.ico"
